--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.3.2"
   },
   "homepage": "./",
   "main": "public/electron.js",
